// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Work Query all fields 1`] = `
Object {
  "data": Object {
    "work": null,
  },
  "errors": Array [
    [GraphQLError: Cannot read properties of undefined (reading 'load')],
  ],
}
`;

exports[`Work fetch by faust 1`] = `
Object {
  "data": Object {
    "work": Object {
      "workId": "work-of:870970-basis:26521556",
    },
  },
}
`;

exports[`Work fetch by id 1`] = `
Object {
  "data": Object {
    "work": Object {
      "workId": "work-of:870970-basis:26521556",
    },
  },
}
`;

exports[`Work fetch by pid 1`] = `
Object {
  "data": Object {
    "work": Object {
      "workId": "work-of:870970-basis:26521556",
    },
  },
}
`;

exports[`Work fetch multi by faust 1`] = `
Object {
  "data": Object {
    "works": Array [
      Object {
        "workId": "work-of:870970-basis:26521556",
      },
    ],
  },
}
`;

exports[`Work fetch multi by id 1`] = `
Object {
  "data": Object {
    "works": Array [
      Object {
        "workId": "work-of:870970-basis:26521556",
      },
    ],
  },
}
`;

exports[`Work fetch multi by pid 1`] = `
Object {
  "data": Object {
    "works": Array [
      Object {
        "workId": "work-of:870970-basis:26521556",
      },
    ],
  },
}
`;
